--- a/public/css/ap.css
+++ b/public/css/ap.css
@@ -10755,8 +10755,77 @@ header > div > div > button {
   height: 40px;
 }
 
-.section1 > {
-  background-color: red;
+section:first-of-type {
+  background-color: ghostwhite;
+}
+
+section:first-of-type > .contenu {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  height: 350px;
+}
+
+section:first-of-type > .contenu > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+section:nth-of-type(2) {
+  display: flex;
+  justify-content: space-around;
+}
+
+section:nth-of-type(2) > div {
+  display: flex;
+  height: 450px;
+}
+
+section:nth-of-type(2) > div > div:first-of-type {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+section:nth-of-type(2) > div > div:first-of-type > p {
+  width: 550px;
+}
+
+section:nth-of-type(2) > div > div > img {
+  height: 450px;
+  width: 630px;
+}
+
+section:nth-of-type(3) {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+}
+
+section:nth-of-type(3) > div {
+  display: flex;
+  height: 450px;
+}
+
+section:nth-of-type(3) > div > div > img {
+  height: 450px;
+  width: 630px;
+}
+
+section:nth-of-type(3) > div > div > p {
+  width: 550px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+section:nth-of-type(3) > div > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=ap.css.map */
