--- a/src/scss/modules/_section.scss
+++ b/src/scss/modules/_section.scss
@@ -1,7 +1,78 @@
-// .1erS{
-//     background-color: blue;
-// }
+// 1er Section
+section:first-of-type{
+    background-color: ghostwhite;
+}
 
-.section1>{
-    background-color: red;
+section:first-of-type>.contenu{
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    height: 350px;
+}
+
+section:first-of-type>.contenu>div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+// 2e Section
+section:nth-of-type(2){
+    display: flex;
+    justify-content: space-around;
+}
+
+section:nth-of-type(2)>div{
+    display: flex;
+    height: 450px;
+}
+
+section:nth-of-type(2)>div>div:first-of-type{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+section:nth-of-type(2)>div>div:first-of-type>p{
+    width: 550px;
+}
+
+section:nth-of-type(2)>div>div>img{
+    height: 450px;
+    width: 630px;
+}
+
+
+
+// 3e Section
+section:nth-of-type(3){
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+}
+
+section:nth-of-type(3)>div{
+    display: flex;
+    height: 450px;
+}
+
+section:nth-of-type(3)>div>div>img{
+    height: 450px;
+    width: 630px;
+}
+
+section:nth-of-type(3)>div>div>p{
+    width: 550px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    // height: 100%;
+}
+
+section:nth-of-type(3)>div>div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
