--- a/src/scss/modules/_section.scss
+++ b/src/scss/modules/_section.scss
@@ -41,9 +41,8 @@ section:nth-of-type(2)>div>div:first-of-type>p{
 
 section:nth-of-type(2)>div>div>img{
     height: 450px;
-    width: 630px;
+    width: 650px;
 }
-
 
 
 // 3e Section
@@ -60,7 +59,7 @@ section:nth-of-type(3)>div{
 
 section:nth-of-type(3)>div>div>img{
     height: 450px;
-    width: 630px;
+    width: 650px;
 }
 
 section:nth-of-type(3)>div>div>p{
@@ -68,11 +67,65 @@ section:nth-of-type(3)>div>div>p{
     display: flex;
     align-content: center;
     justify-content: center;
-    // height: 100%;
 }
 
 section:nth-of-type(3)>div>div{
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+// 4e Section
+section:nth-of-type(4){
+    display: flex;
+    justify-content: space-around;
+}
+
+section:nth-of-type(4)>div{
+    display: flex;
+    height: 450px;
+}
+
+section:nth-of-type(4)>div>div:first-of-type{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+section:nth-of-type(4)>div>div:first-of-type>p{
+    width: 550px;
+}
+
+section:nth-of-type(4)>div>div>img{
+    height: 450px;
+    width: 650px;
+}
+
+// 5e Section
+section:nth-of-type(5){
+    text-align: center;
+}
+
+section:nth-of-type(5)>div>div>div>img{
+    border-radius: 50%;
+    width: 200px;
+}
+
+section:nth-of-type(5)>div>:first-child{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+section:nth-of-type(5)>div>div>div>p{
+    width: 290px;
+}
+
+// 6e Section
+section:nth-of-type(6){
+    background-image: url(../../../public/img/bg-masthead.jpg);
+    background-size: 900px;
+    height: 400px;
 }
